cendopu registro terminado

--- a/admin/pages/flujocendopu.html
+++ b/admin/pages/flujocendopu.html
@@ -259,7 +259,14 @@
                                     <option value="3485">	(3485) Licenciatura en Educación Física y Deporte – Semi-presencial	</option>
                                     <option value="3486">	(3486) Licenciatura en Educación Popular- Semi-presencial nocturno	</option>
                                     <option value="3487">	(3487) Licenciatura en Matemática Física - Presencial	</option>
-                                    <option value="3488">	(3488) Licenciatura en Matemática Física - Semi-presencial	</option>
+                                    <option value="3488">   (3488) Licenciatura en Matemática Física - Semi-presencial  </option>
+                                    <option value="7405">   (7405) Maestría en Educación - Énfasis en Educación Popular y Desarrollo Comunitario</option>
+                                    <option value="7406">   (7406) Maestría en Educación - Énfasis en Enseñanza de las Ciencias</option>
+                                    <option value="7412">   (7412) Maestría en Educación - Énfasis en Educación Matemática</option>
+                                    <option value="7414">   (7414) Maestría en Educación - Énfasis en Enseñanza de las Ciencias Naturales</option>
+                                    <option value="7415">   (7415) Maestría en Educación - Énfasis en Pedagogia del Entrenamiento Deportivo</option>
+                                    <option value="7419">   (7419) Maestría en Educación - Énfasis en Género, Educación Popular y Desarrollo</option>
+                                    <option value="9405">	(9405) Doctorado Interinstitucional en Educación</option>
                                     <option value="9999">	(9999) Otro Plan	</option>
                                   </select>
                               </div>
