--- a/admin/pages/rcendopu.html
+++ b/admin/pages/rcendopu.html
@@ -126,7 +126,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i>Reservas</h1>
+                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i>Reporte - Cendopu</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -135,7 +135,17 @@
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Flujo reciente de reservas
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Detalle de Horas
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="planilla_mes_s4"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Accesos en los últimos días
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -144,17 +154,40 @@
                         <!-- /.panel-body -->
                     </div>
                     <!-- /.panel -->
+                    <div class="panel panel-default  fade">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Estudiantes por Mes
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="morris-area-chart-reservas-diarias"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                    <div class="panel panel-default fade">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Horas Pico y Valle
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="morris-area-chart-hpyv"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+
 
                 </div>
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-4">
                     <!-- /.panel -->
                     <div class="panel panel-default">
-                        <div class="panel-heading" id="btn_details" >
-                            <i class="fa fa-bar-chart-o fa-fw"></i>
+                        <div class="panel-heading" >
+                            <i class="fa fa-bar-chart-o fa-fw"></i>Estudiantes por Programa
                         </div>
-                        <div class="panel-body">
-                            <div id="morris-donut-chart-solicitudes"></div>
+                        <div class="panel-body" id="estxprog">
+                            
 
                         </div>
                         <!-- /.panel-body -->
@@ -163,23 +196,6 @@
 
                 </div>
                 <!-- /.col-lg-4 -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Reservas Diarias
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div id="morris-area-chart-reservas"></div>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-8 -->
             </div>
             <!-- /.row -->
         </div>
@@ -212,9 +228,8 @@
     <script src="../js/scriptdata.js"></script>
     <script type="text/javascript">
         get_user("#fld-email");
-        get_chardata_reservas(1);
-        get_chardata_reservas(2);
-        get_chardata_d_res();
+        get_chardata_reservas(3);
+        get_chardata_exp('estxprog');
     </script>
 
 
