Cambios en cendopu

--- a/admin/pages/rcendopu.html
+++ b/admin/pages/rcendopu.html
@@ -154,13 +154,13 @@
                         <!-- /.panel-body -->
                     </div>
                     <!-- /.panel -->
-                    <div class="panel panel-default  fade">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Estudiantes por Mes
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div id="morris-area-chart-reservas-diarias"></div>
+                            <div id="morris-bar-chart-est-mes"></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -230,6 +230,7 @@
         get_user("#fld-email");
         get_chardata_reservas(3);
         get_chardata_exp('estxprog');
+        get_chardata_exp('morris-bar-chart-est-mes');
     </script>
 
 
