--- a/admin/pages/flujocendopu.html
+++ b/admin/pages/flujocendopu.html
@@ -260,6 +260,7 @@
                                     <option value="3486">	(3486) Licenciatura en Educación Popular- Semi-presencial nocturno	</option>
                                     <option value="3487">	(3487) Licenciatura en Matemática Física - Presencial	</option>
                                     <option value="3488">   (3488) Licenciatura en Matemática Física - Semi-presencial  </option>
+                                    <option value="3489">   (3489) Estudios Políticos  </option>
                                     <option value="7405">   (7405) Maestría en Educación - Énfasis en Educación Popular y Desarrollo Comunitario</option>
                                     <option value="7406">   (7406) Maestría en Educación - Énfasis en Enseñanza de las Ciencias</option>
                                     <option value="7412">   (7412) Maestría en Educación - Énfasis en Educación Matemática</option>
