--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -39,12 +39,13 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style type="text/css">
+        .search-box{width: 100%;}
     	.loading_box{
     		position:absolute;
 		    width:100%;
 		    height:100%;
 		    background:#fff url(../img/ajax-loader.gif) no-repeat center;
-		    display: block;
+		    display: none;
 		    z-index: 2000;
 		    text-align: center;
 		    opacity: 0.7;
@@ -93,7 +94,7 @@
                                 <button class="btn btn-default" type="button">
                                     <i class="fa fa-search"></i>
                                 </button>
-                            </span>
+                                </span>
                             </div>
                             <!-- /input-group -->
                         </li>
@@ -153,9 +154,18 @@
                             <div class="col-lg-8">
                                 <div class="panel panel-primary">
                                     <div class="panel-heading">
-                                        Estudiantes Registrados
+                                        Estudiantes Registrados - Consulta
                                     </div>
                                     <div class="panel-body">
+                                        <div class="input-group custom-search-form">
+                                            <input type="text" class="form-control" id="inp_search" placeholder="Ingrese código o nombre">
+                                            <span class="input-group-btn">
+                                            <button class="btn btn-default" type="button" id="btn_search">
+                                                <i class="fa fa-search"></i>
+                                            </button>
+                                            </span>
+                                        </div>
+                                        <br>
                                         <div class="dataTable_wrapper">
                                             <table class="table table-striped table-bordered table-hover" id="datatables-registrados">
                                                 <thead>
@@ -170,7 +180,7 @@
                                         </div>
                                     </div>
                                     <div class="panel-footer">
-                                        Panel Footer
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -284,17 +294,19 @@
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
-    	$("#cargando_box").show();
-        get_user("#fld-email");
-        $(document).ready(function() {
-        var oTable = $('#datatables-registrados').dataTable({
+    get_user("#fld-email");
+    $(document).ready(function() {
+        $("#btn_search").on("click", function(){ 
+            get_estudiante($("#inp_search").val());
+        });
+        /*var oTable = $('#datatables-registrados').dataTable({
             responsive: true,
             language: {
                 "url": "http://cdn.datatables.net/plug-ins/a5734b29083/i18n/Spanish.json"
             }
         });
-        get_registrados(oTable);
-        $(".loading_box").fadeOut(10000);
+        get_registrados(oTable);*/
+        //$(".loading_box").fadeOut(10000);
     });
     </script>
 
