cambio en listado de estudiantes registrados

--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -166,17 +166,8 @@
                                             </span>
                                         </div>
                                         <br>
-                                        <div class="dataTable_wrapper">
-                                            <table class="table table-striped table-bordered table-hover" id="datatables-registrados">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Código - Plan</th>
-                                                        <th>Nombre</th>
-                                                        <th>Detalles</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody></tbody>
-                                            </table>
+                                        <div class="dataTable_wrapper" id="table-resp">
+
                                         </div>
                                     </div>
                                     <div class="panel-footer">
