--- a/admin/pages/usuarios.html
+++ b/admin/pages/usuarios.html
@@ -280,6 +280,24 @@
       </div>
     </div>
 
+    <!-- Modal para ver registro de usuarios -->
+    <div class="modal fade" id="modal_verRegistro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel-lg" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel-lg">Detalle de Actividades</h4>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap Modal para traer turnos -->
     <div class="modal fade" id="get_turnos_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
